# LidarCameraCalibrationTool

calibration/: CHANGELOG.rst  CMakeLists.txt  package.xml
calibration/launch/: remove_ground.launch
calibration/src/: CalibBoardDetector.cpp  CalibBoardDetector.h  main.cpp  point_cloud2_display_widget.cpp  point_cloud2_display_widget.h  point_cloud2_set_widget.cpp  point_cloud2_set_widget.h  remove_ground.cpp  xml_read_and_write.cpp  xml_read_and_write.h
calibration/src/doc/: index.rst
